# proto/gen/apidocs.swagger.yaml
@@ -3250,9 +3250,6 @@ definitions:
         title: |-
           The memo names that were reviewed.
           Format: memos/{id}
-      source:
-        $ref: '#/definitions/v1ReviewSource'
-        description: The source of the review.
   v1RecordReviewResponse:
     type: object
     properties:
@@ -3317,15 +3314,6 @@ definitions:
     properties:
       markdown:
         type: string
-  v1ReviewSource:
-    type: string
-    enum:
-      - REVIEW_SOURCE_UNSPECIFIED
-      - REVIEW_SOURCE_REVIEW
-      - REVIEW_SOURCE_ON_THIS_DAY
-      - REVIEW_SOURCE_SURPRISE
-      - REVIEW_SOURCE_TIME_TRAVEL
-    default: REVIEW_SOURCE_UNSPECIFIED
   v1RowStatus:
     type: string
     enum:
